--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,11 +8,13 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Feliz cumpleaños!!!</title>
+		
 	</head>
 	<body>
 		<slot />
 	</body>
+	
 </html>
 
 <style>
