--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,20 @@
 @import "tailwindcss";
 @import "tailwindcss-animated";
+
+
+.bot-shadow {
+
+  -webkit-mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+body {
+  background-image: url("./media/mangoo.webp");
+  background-size: cover;
+  backdrop-filter: blur(5px);
+
+}
+
