--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
   mask-size: 100% 100%;
 }
 body {
-  background-image: url("./media/mangoo.webp");
+  background-image: url("./media/mangoo.png");
   background-size: cover;
   backdrop-filter: blur(5px);
 
