--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -23,6 +23,10 @@ import "../js/script.js";
 </script>
 
 <style>
-	
+	body {
+		background-image: url("./media/mangoo.png");
+  background-size: cover;
+  backdrop-filter: blur(5px);
+	}
 </style>
 	
