--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -9,7 +9,7 @@
 	</div>
 	
 	<div class="bot-shadow animatedd hidden animate-fade-up animate-once animate-duration-[2000ms] animate-ease-linear">
-		<h1 class="text-4xl text-green-600">Feliz cumpleaños MONGUI!! 🎉🎂</h1>
+		<h1 class="text-4xl text-green-600 font-bold text-center">Feliz cumpleaños MONGUI!! 🎉🎂</h1>
 		<img src="./media/mangort.png" alt="" class="">
 		
 	</div>
