--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -1,16 +1,16 @@
 <div class="fondoo w-full h-full flex justify-center items-center">
 
 
-	<div class="hidden mangoface">
-		<img src="./media/mangototo.png" alt="" class=" absolute top-0.5 z-2 animate-fade animate-once animate-duration-[2500ms] animate-ease-in">
+	<div class="hidden mangoface absolute z-1">
+		<img src="./media/mangototo.png" alt="" class="animate-fade animate-once animate-duration-[2500ms] animate-ease-in">
 	</div>
-	<div class="hidden msg  absolute z-2 bg-yellow-200 border-2 border-black p-1">
-		<p class="text-2xl text-green-700 text-bold animate-fade animate-once animate-duration-[2000ms] animate-ease-in">Gracias por poco, perdon por tan todo... era asi?? NO IMPORTA, FELIZ CUM! </p>
+	<div class="hidden msg  absolute z-2 bg-gray-800 backdrop-filter backdrop-blur-sm rounded border-black sm:text-xl">
+		<p class="text-2xl text-green-700 text-bold animate-fade animate-once animate-duration-[2000ms] animate-ease-in p-2">Gracias por poco, perdon por tan todo... era asi?? NO IMPORTA, FELIZ CUM! </p>
 	</div>
 	
 	<div class="bot-shadow animatedd hidden animate-fade-up animate-once animate-duration-[2000ms] animate-ease-linear">
 		<h1 class="text-4xl text-green-600 font-bold text-center">Feliz cumpleaños MONGUI!! 🎉🎂</h1>
-		<img src="./media/mangort.png" alt="" class="">
+		<img src="./media/mangort.png" alt="" class="lg:pl-18">
 		
 	</div>
 	<audio src="./media/sietemarzoyipiee.mp3" id="audio"></audio>
@@ -27,6 +27,7 @@ import "../js/script.js";
 		background-image: url("./media/mangoo.png");
   background-size: cover;
   backdrop-filter: blur(5px);
+  font-family:Verdana, Geneva, Tahoma, sans-serif
 	}
 </style>
 	
